<resources>
    <string name="app_name">必优助</string>
    <string name="BUCSSA">BUCSSA</string>
    <string name="welcome">欢迎使用BUCSSA官方APP</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="sample_title">标题 Title</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>
    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_not_notify">not new data</string>
    <string name="snack_message_login_success">登陆成功</string>
    <string name="snack_message_net_error">网络错误，请检查网络设置</string>
    <string name="snack_message_timeout_error">网络连接超时</string>
    <string name="snack_message_password_error">This password is incorrect</string>
    <string name="snack_message_unknown_error">未知错误</string>
    <string name="snack_message_data_error">data error</string>
    <string name="snack_action_to_setting">Setting</string>
    <string name="lulu_loading">炉炉正在帮你整理资料！</string>
    <string name="lulu_finishLoading">资料整理完毕，汪！</string>
    <string name="auto_login">炉炉正在尝试帮你登录！</string>
    <string name="manual">新生手册</string>
    <string name="classmate">找课友</string>
    <string name="roommate">找室友</string>
    <string name="officialNews">官方推送</string>
    <string name="commnet">评论</string>
    <string name="like">赞</string>
    <string name="sample_news_title">NBA季后赛次场:火箭107-110马刺火箭107-110马刺</string>
    <string name="sample_news_time">2017 7-21 13:43</string>
    <string name="sample_value">6</string>
    <string name="connect">已连接到聊天室</string>
    <string name="disconnect">连接断开，请检查你的网络连接</string>
    <string name="error_connect">错误连接</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_email">请输入你的邮箱</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_register">没有账号？那来注册吧</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="go_login">已经有账号？那返回登录吧</string>
    <string name="attempt_login">正在登录</string>
    <string name="attempt_register">正在注册</string>
    <string name="third_party_login">使用第三方账号登录</string>
    <string name="guest_login">游客登录</string>
    <string name="no_self_intro_self">你还没给自己添加介绍呢~</string>
    <string name="no_self_intro_others">这个新来的宝宝什么也没留下</string>
    <string name="please_enter_username">请输入新的用户名</string>
    <string name="please_enter_intro">请输入你的个人介绍</string>
    <string name="sample_intro">我是一个开朗的孩子</string>
    <string name="my_class">我的课程</string>
    <string name="find_class">寻找课程</string>
    <string name="my_group">我的小组</string>
    <string name="my_topic">我的话题</string>
    <string name="my_collection">我的关注</string>
    <string name="noclass_text">当前还没有加入任何课程哦\n快去找找课友吧！</string>
    <string name="search_class">请输入课程或教授名字搜索</string>
    <string name="search_group">请输入课程或创建人名字搜索</string>
    <string name="search_topic">请输入标题关键词进行搜索</string>
    <string name="all_data">以上就是全部内容了哦！</string>
    <string name="notCollected">关注</string>
    <string name="isCollected">已关注</string>
    <string name="sample_comment">&#160;&#064;Sh1nJi 求好兄弟给我解解惑啦，我觉得应该答案是C的</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
</resources>