<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/borderless_wrap_layout_white"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_username"
            android:textColor="@color/tv_black"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/BUCSSA"
                android:textSize="18sp"
                android:gravity="center">

                <requestFocus/>
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"/>

    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/material_red"
            android:textSize="18sp"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/border"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/tv_blue"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>




</LinearLayout>