<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <LinearLayout
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_400"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_class"
                        android:textColor="@color/tv_black"
                        android:textSize="18sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_400"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_addClass"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/addition"
                    android:background="@drawable/selector_bg_round_red"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/title"
                    android:layout_marginLeft="30dp"/>


            </RelativeLayout>


        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/selector_bg_classmate_button2"
            android:text="@string/noclass_text"
            android:gravity="center"
            android:textColor="@color/tv_black"/>

        <TextView
            android:id="@+id/tv_myGroup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/my_group"
            android:textColor="@color/white"
            android:background="@drawable/selector_bg_classmate_button"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_myTopic"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/my_topic"
            android:textColor="@color/white"
            android:background="@drawable/selector_bg_classmate_button"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</LinearLayout>