<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background2"
    android:id="@+id/rootView">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/ic_back_white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_below="@id/status_bar"/>

    <TextView
        android:id="@+id/tv_guest_login"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/guest_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_below="@id/status_bar"/>



    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/bucssa"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_wrap_trans_white"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/username"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/login_edtId"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_username"
                    android:ems="10"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <LinearLayout
                android:id="@+id/userPW_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/password"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/login_edtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="@string/enter_password"
                    android:paddingLeft="15dp"
                    android:paddingRight="0dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_bg_login_button"
            android:text="@string/login"
            android:textColor="@color/grey_300"
            android:textSize="19sp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp">


            <TextView
                android:id="@+id/login_txtForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/third_party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_login"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/third_party"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/third_party"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/wechat"/>

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>